--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -35,6 +35,14 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.sushobhan</groupId>
             <artifactId>clients</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -42,4 +50,9 @@
         </dependency>
     </dependencies>
 
+<!--    Artifacts specified in the <dependencies> section will ALWAYS be included as a dependency of the child module(s).-->
+
+<!--&lt;!&ndash;    Artifacts specified in the <dependencyManagement> section, will only be included in the child module if they were also specified in the <dependencies> section of the child module itself. &ndash;&gt;-->
+<!--&lt;!&ndash;    Why is it good you ask? Because you specify the version and/or scope in the parent, and you can leave them out when specifying the dependencies in the child POM. &ndash;&gt;-->
+<!--&lt;!&ndash;    This can help you use unified versions for dependencies for child modules, without specifying the version in each child module.&ndash;&gt;-->
 </project>
